# gigapdf

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.admin  Dockerfile.api  Dockerfile.web  L0_MASTER_PLAN.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_QUICKSTART.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.base.json  turbo.json
.claude/API_PUBLIC_20260312/: L0_MASTER_PLAN.md
.claude/MIGRATION_PDFLIB_20260312/: IMPACT_ANALYSIS.md  L0_MASTER_PLAN.md  L1_ARCHITECTURE_BLUEPRINT.md  LICENSE_AUDIT_REPORT.md
.claude/SESSION_20260421_gigapdf_audit/: FINAL_REPORT.md  REGRESSION_GUARD_REPORT.md
.claude/SESSION_20260422_python_to_ts_integral/: 00_impact_analysis.md
.claude/SESSION_20260423_023327_quality_audit_refactor/: FINAL_REPORT.md  FUTURE_BACKLOG.md  L0_WORKFLOW.yaml  REFACTORING_ROADMAP.md  TECH_DEBT_REPORT.md
.claude/SESSION_20260503_215000_full_audit_office/: 01_audit_features.md  L0_MASTER_PLAN.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security.md
.github/workflows/: ci.yml  dco.yml  release-source-zip.yml  security.yml
.husky/: pre-commit
.tmp-debug/: extract-type1.mjs  inspect-baked.mjs  inspect-pdfjs.mjs  test-cff-embed.mjs  test-converted-embed.mjs  test-converter.mjs  test-coverage.mjs  test-decode-stream.mjs
app/: __init__.py  config.py  dependencies.py  main.py  sentry.py
app/api/: websocket.py
app/core/: __init__.py  cache.py  database.py  i18n.py  ocr.py  parser.py  pdf_engine.py  preview.py  renderer.py
app/middleware/: __init__.py  api_key_auth.py  api_quota.py  auth.py  error_handler.py  rate_limiter.py  request_id.py
app/models/: __init__.py  api_key.py  base.py  bookmarks.py  database.py  document.py  elements.py  history.py  jobs.py  layers.py  page.py  storage.py  tenant.py
app/repositories/: __init__.py  document_repo.py  redis_document_repo.py
app/schemas/: __init__.py  api_keys.py  billing.py  fonts.py  infrastructure.py
app/services/: __init__.py  activity_service.py  billing_permission_service.py  collaboration_service.py  content_extraction_service.py  document_service.py  element_service.py  embeddings.py  encryption_service.py  font_extraction_service.py  history_service.py  infra_metrics_service.py  job_service.py  notification_service.py  quota_service.py  s3_service.py  scaleway_service.py  security_audit_service.py  share_service.py  storage_service.py  stripe_service.py  text_chunking.py
app/tasks/: __init__.py  billing_tasks.py  celery_app.py  export_tasks.py  infra_tasks.py  ocr_tasks.py  processing_tasks.py  storage_tasks.py
app/utils/: __init__.py  coordinates.py  helpers.py  validators.py
apps/admin/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  server-https.mjs  tailwind.config.ts  tsconfig.json
apps/mobile/: ARCHITECTURE.md  README.md  app.config.ts  app.json  eas.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/: .env.example  .gitignore  CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  eslint.config.mjs  middleware.ts  next.config.ts  package.json  prisma.config.ts  proxy.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  server-https.mjs  server.js  vitest.config.ts
branding/: README.md
database/: README.md  create-super-admin.sh  setup.sh
database/migrations/: 001_initial_schema.sql
deploy/: .env.production.example  deploy.sh  gigapdf-ci-deploy.sh  init-betterauth-tables.sql  logrotate.conf  nginx.conf  push-deploy.sh  redeploy.sh  setup-server.sh
deploy/fail2ban/: jail.local
deploy/nginx/: maintenance.html
deploy/systemd/: gigapdf-admin.service  gigapdf-api.service  gigapdf-celery-billing.service  gigapdf-celery.service  gigapdf-ocr.service  gigapdf-web.service
docs/: ARCHITECTURE.md  MIGRATION_COMPLETE.md  WEBSOCKET_COLLABORATION.md  WEBSOCKET_SETUP.md  backup.md  deployment.md  editor-stores-migration.md  migration-python-to-ts.md  semantic-search-setup.md  share-service-decomposition.md  user-schema-audit.md  user-schema-unification-roadmap.md
docs/api/: README.md  billing.md
docs/guides/: DEPLOYMENT.md  DEVELOPMENT.md  INSTALLATION.md
docs/oss/: README.md
docs/security/: IMPLEMENTATION_TRACKER.md  SECRETS_AUDIT_FINDINGS.md  SECRETS_ROTATION_PLAYBOOK.md  dek-kms-migration.md  secrets-management.md
examples/: README.md  websocket_client.js  websocket_client.py
migrations/: env.py
migrations/versions/: 001_add_collaboration_tables.py  002_add_storage_and_jobs_tables.py  003_add_plans_table.py  004_add_tenant_tables.py  005_add_tenant_plan_features.py  006_add_plan_linked_tenant.py  007_add_stripe_fields.py  008_add_trial_fields.py  009_add_stripe_product_id_to_plans.py  010_convert_timestamps_to_timestamptz.py  011_add_activity_logs_table.py  012_add_encryption_key_column.py  013_add_sharing_tables.py  015_add_api_keys_table.py  016_add_publishable_key_to_api_keys.py  017_add_ged_search_and_trash.py  018_align_free_document_limit.py  019_add_semantic_search.py  020_add_original_format.py  021_raise_free_document_limit.py  022_raise_starter_pro_document_limits.py  (+2 more)
scripts/: audit-secrets.sh  backfill_index.py  backup-postgres.sh  dev-all-https.sh  dev-all.sh  dev-https.sh  install_tesseract.sh  migrate-postgres-17.sh  restore-postgres.sh  rollback.sh  rotate-postgres-password.sh  setup_db.sh
tests/: __init__.py  conftest.py
(+683 files in other folders)
